# raytracer_challange

./: .gitignore  Cargo.toml  README.md  perf.data
src/: camera.rs  color.rs  direction.rs  geometry.rs  location.rs  main.rs  scene.rs  threadpool.rs
